added media Queries

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
               <h2>About Me</h2>
           </div>
           <hr>
-                    
+            <div id="col-1">     
             <img src="images/Profile.jpg" height="200" width="200" alt="Image" style="float:left; padding: 10px;"> 
+            </div> 
+            <div id="col-2">
               <p>I was born right outside of Philadelphia. I grew up having fun building lego sets and model trains with my grandpa. I enjoyed
                  the out doors and eventually when I was 10 I joined the 4-H club. For those who don't know the 4-H club is an agricultural club, which
                   was started in the early 1900's to promote agricultural interest in young americans, similar to the boy scouts. I enjoyed raising pigs 
@@ -37,6 +39,8 @@
                   In highschool I was a part of FIRST Robotics, where you students built and developed robots for various challenges and competitions. In college
                   I became the IT Director for the Council of Commonwealth Student Governements and managed the front-end development of their website.
               </p>
+            </div>
+            
               <br>
               <br>
               <p>
