--- a/portfolio.html
+++ b/portfolio.html
@@ -32,31 +32,31 @@
 
             <div class="row">
                 <div class="contianer-relative">
-                        <img src="images/IMG1.jpg" height="200" width="30%" alt="Image" style="float: left; padding: 10px;">
+                        <img src="images/IMG1.jpg" height="200" width="225px" alt="Image" style="float: left; padding: 10px;">
                         <p class="banner-left">Hangman</p> 
                 </div>
 
                 <div class="contianer-relative">
-                        <img src="images/IMG2.jpg" height="200" width="30%" alt="Image" style="padding: 10px;"> 
+                        <img src="images/IMG2.jpg" height="200" width="225px" alt="Image" style="padding: 10px;"> 
                         <p class="banner-right">RPG Game</p> 
                 </div>
             </div>
 
             <div class="row">
                 <div class="contianer-relative">
-                        <img src="images/IMG3.jpg" height="200" width="30%" alt="Image" style="float: left; padding: 10px;"> 
+                        <img src="images/IMG3.jpg" height="200" width="225px" alt="Image" style="float: left; padding: 10px;"> 
                         <p class="banner-left">Trivia Game</p> 
                 </div>
 
                 <div class="contianer-relative">
-                        <img src="images/IMG4.jpg" height="200" width="30%" alt="Image" style=" padding: 10px;"> 
+                        <img src="images/IMG4.jpg" height="200" width="225px" alt="Image" style=" padding: 10px;"> 
                         <p class="banner-right">Rutgers Info</p> 
                 </div>
             </div>
                       
             <div class="row">
                     <div class="contianer-relative">
-                        <img src="images/IMG5.jpg" height="200" width="30%" alt="Image" style="padding: 10px;"> 
+                        <img src="images/IMG5.jpg" height="200" width="225x" alt="Image" style="padding: 10px;"> 
                         <p class="banner-left">Rock Paper Scissors</p> 
                     </div>    
             </div>
